# ockam

./: README.md
.github/workflows/: all.yml  commits.yml  documentation.yml  elixir.yml  rust.yml
documentation/guides/rust/get-started/05-secure-channel/: README.md
documentation/use-cases/end-to-end-encryption-through-kafka/: README.md
documentation/use-cases/end-to-end-encryption-with-rust/: README.md
documentation/use-cases/secure-remote-access-tunnels/: README.md
examples/rust/: hello.txt
examples/rust/file_transfer/: Cargo.toml
examples/rust/file_transfer/examples/: receiver.rs  sender.rs
examples/rust/file_transfer/src/: messages.rs
examples/rust/get_started/examples/: 05-secure-channel-over-two-transport-hops-initiator.rs  alice.rs  bob.rs  hello.rs
examples/rust/get_started/src/: logger.rs
examples/rust/ockam_kafka/examples/: ockam_kafka_alice.rs  ockam_kafka_bob.rs
examples/rust/tcp_inlet_and_outlet/examples/: 03-inlet.rs  04-inlet.rs  04-outlet.rs
implementations/elixir/ockam/ockam/: mix.exs
implementations/elixir/ockam/ockam_hub/config/: runtime.exs
implementations/rust/ockam/ockam/: Cargo.toml
implementations/rust/ockam/ockam/src/: forwarder.rs  lease.rs  lib.rs  metadata.rs  remote_forwarder.rs
implementations/rust/ockam/ockam_abac/: Cargo.toml
implementations/rust/ockam/ockam_abac/src/: lib.rs  mem.rs
implementations/rust/ockam/ockam_api/: Cargo.toml  build.rs
implementations/rust/ockam/ockam_api/proto/: api.proto
implementations/rust/ockam/ockam_api/src/: lib.rs
implementations/rust/ockam/ockam_api_nodes/: Cargo.toml  build.rs
implementations/rust/ockam/ockam_api_nodes/proto/: api.nodes.proto
implementations/rust/ockam/ockam_api_nodes/src/: lib.rs
implementations/rust/ockam/ockam_capability/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_channel/: Cargo.toml
implementations/rust/ockam/ockam_core/: Cargo.toml
implementations/rust/ockam/ockam_identity/: Cargo.toml
implementations/rust/ockam/ockam_multiaddr/: Cargo.toml
implementations/rust/ockam/ockam_node/: Cargo.toml
implementations/rust/ockam/ockam_transport_tcp/: Cargo.toml
(+119 files in other folders)
